✨Feat: MDC를 통한 요청 추적기 예제 프로젝트 완성

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.5.8'
     id 'io.spring.dependency-management' version '1.1.7'
+    id("me.champeau.jmh") version "0.7.3"
 }
 
 group = 'io.github.zeromok'
@@ -32,6 +33,20 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // JMH 버전을 플러그인 기본 버전(1.37)과 맞춤
+    jmhImplementation 'javax.annotation:javax.annotation-api:1.3.2'
+}
+
+jmh {
+    // JMH 버전 명시 (플러그인 기본값 1.37 사용)
+    jmhVersion = '1.37'
+    
+    iterations = 5
+    benchmarkMode = ['avgt']
+    warmupIterations = 3
+    fork = 1
+    jvmArgs = ['-Xms2G', '-Xmx2G']
 }
 
 tasks.named('test') {
